# bakuhatsu

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  Makefile_initial  PERFORMANCE_RESULTS.txt  README.md  README_initial.md
benchmarks/: performance_test.c
examples/: basic_var.c  simple_test.c  working_demo.c
include/bakuhatsu/: bakuhatsu.h
include/bakuhatsu/math/: box_muller_simd.h  nig_distribution.h
include/bakuhatsu/rng/: mersenne_twister_simd.h  rng_pool.h
include/bakuhatsu/simd/: neon_utils.h
include/bakuhatsu/streaming/: correlation_monitor.h
include/bakuhatsu/var/: realtime_var.h
src/math/: box_muller_basic.c  box_muller_simd.c  box_muller_simd_v1.c  nig_distribution.c  nig_distribution_draft.c
src/risk/: correlation_monitor_draft.c  var_engine_integration.c
src/rng/: mersenne_twister_simd.c  mt_basic.c  mt_simd_breakthrough.c  rng_pool.c
src/simd/: neon_math.c  neon_test.c  neon_utils.c  neon_utils_initial.h
src/streaming/: correlation_monitor.c
src/var/: monte_carlo_basic.c  realtime_var.c
